2004-06-14 Magnus Hagdorn
 * added shared command line option parser

2004-06-14 Magnus Hagdorn
 * rename false_westing to false_easting
   (CF_proj.py, add_projinfo.py, create_topo.py)

2004-06-14 Magnus Hagdorn
 * added colour maps
	
2004-06-14 Magnus Hagdorn
 * CF_loadfile.py: added variable class
 * CF_area.py: first test of plotting images and contour lines
	
2004-06-13 Magnus Hagdorn
 * CF_proj.py: made scale_factor_at_projection_origin optional and added a 
   function for projecting points
 * CF_loadfile.py: Class for loading a CF file
 * CF_area.py: Class for visualising CF data sets
	
2004-06-13 Magnus Hagdorn
 * move projection help messages to CF_proj.py (create_topo.py)
 * add_projinfo.py: program used to add mapping info to netCDF files
	
2004-06-13 Magnus Hagdorn
 * added some contents to README
 * added class for creating new netCDF files using the specs from the glimmer 
   src (CF_createfile.py, __init__.py)
 * added Lambert Azimuthal Equal Area projection (CF_proj.py)
 * create_topo.py: using new netCDF file creating infrastructure, using
   GMT grids for input data
	
2004-06-10 Magnus Hagdorn
 * started PyCF, python progs/modules for handling CF/Glimmer netCDF files