@@ -1,0 +1,22 @@
+#	cpt file created by: makecpt -Cjet -T-12/8/1 -I
+#COLOR_MODEL = RGB
+#
+-12	127	0	0	-11	127	0	0
+-11	178	0	0	-10	178	0	0
+-10	229	0	0	-9	229	0	0
+-9	255	25	0	-8	255	25	0
+-8	255	77	0	-7	255	77	0
+-7	255	128	0	-6	255	128	0
+-6	255	178	0	-5	255	178	0
+-5	255	229	0	-4	255	229	0
+-4	255	255	140	-3	255	255	140
+-3	255	255	165	-2	255	255	165
+-2	255	255	191	-1	255	255	191
+-1	255	255	217	0	255	255	217
+0	0	229	255	1	0	229	255
+1	0	127	255	2	0	127	255
+2	0	26	255	3	0	26	255
+3	0	0	178	4	0	0	178
+B	127	0	0
+F	0	0	178
+N	255	255	255
