@@ -1,0 +1,16 @@
+#	cpt file created by: makecpt -Cjet -T-1000/1000/100
+#COLOR_MODEL = RGB
+#
+0	255	255	255	10	255	255	255
+10	255	255	165	20	255	255	165
+20	255	255	140	50	255	255	140
+50	255	229	0	100	255	229	0
+100	255	179	0	150	255	179	0
+150	255	127	0	200	255	127	0
+200	255	76	0	250	255	76	0
+250	255	26	0	500	255	26	0
+500	229	0	0	750	229	0	0
+750	178	0	0	1000	178	0	0
+B	255	255	255
+F	178     0       0
+N	128	128	128
